--- a/Lab1/khanacademy/csslayout/group.html
+++ b/Lab1/khanacademy/csslayout/group.html
@@ -7,8 +7,12 @@
       .first-sentence {
         font-weight: bold;
       }
-      .info{
+      .info {
         background-color: aqua;
+        margin: 0 auto;
+        width: 1000px;
+        max-height: 100px;
+        overflow-y: auto;
       }
     </style>
   </head>
