--- a/Lab3/helloworld.html
+++ b/Lab3/helloworld.html
@@ -9,10 +9,11 @@
 
     <p>...After the script.</p>
 
-
-    <script type="text/javascript"><!--
-        ...
-    --></script> 
+    <script type="text/javascript">
+      <!--
+              ...
+          -->
+    </script>
 
     <!-- <script src="codestructure.js"></script> -->
     <!-- <script src="usestrict.js"></script> -->
@@ -24,5 +25,11 @@
     <!-- <script src="loops.js"></script> -->
     <!-- <script src="switch.js"></script> -->
     <!-- <script src="functions.js"></script> -->
-</body>
+    <!-- <script src="objects.js"></script> -->
+    <!-- <script src="objectmethods.js"></script> -->
+    <!-- <script src="numbers.js"></script> -->
+    <!-- <script src="strings.js"></script> -->
+    <!-- <script src="arrays.js"></script> -->
+    <script src="map.js"></script>
+  </body>
 </html>
